<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        
    <PreferenceCategory
            android:title="@string/camera_settings">

        <CheckBoxPreference
                android:key="checkbox_preference"
                android:title="@string/capture_focus"
                android:summary="@string/summary_capture_focus" />
        
        <ListPreference
                android:key="list_preference"
                android:title="@string/picture_format"
                android:summary="@string/summary_picture_format"
                android:entries="@array/entries_picture_format"
                android:entryValues="@array/entryvalues_picture_format"
                android:dialogTitle="@string/pick_picture_format" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/gallery_settings">

        <EditTextPreference
                android:key="edittext_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/dialog_title_edittext_preference" />

        <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_picture_format"
                android:entryValues="@array/entryvalues_picture_format"
                android:dialogTitle="@string/pick_picture_format" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/about">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <!-- <PreferenceScreen
                android:key="screen_preference"
                android:title="@string/title_screen_preference"
                android:summary="@string/summary_screen_preference">

            <!- You can place more preferences here that will be shown on the next screen. ->

            <!- <CheckBoxPreference
                    android:key="next_screen_checkbox_preference"
                    android:title="@string/title_next_screen_toggle_preference"
                    android:summary="@string/summary_next_screen_toggle_preference" />

        </PreferenceScreen> -->

        <PreferenceScreen
                android:title="@string/author"
                android:summary="@string/summary_author">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:sebbas@sebbas.org">
                <extra android:name="android.intent.extra.SUBJECT" android:value="@string/app_name" />
            </intent>

        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/blog"
                android:summary="@string/summary_blog">

            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/homepage" />

        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/details"
                android:summary="@string/summary_details">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.sebbas.org" />

        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/share"
                android:summary="@string/summary_share">

            <intent android:action="android.intent.action.SHARE"
                    android:data="http://www.sebbas.org" />

        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/version"
                android:summary="@string/summary_version">

        </PreferenceScreen>

    </PreferenceCategory>

    <!--  <PreferenceCategory
            android:title="@string/preference_attributes">

        <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="@string/title_parent_preference"
                android:summary="@string/summary_parent_preference" />

        <!- The visual style of a child is defined by this styled theme attribute. ->
        <!-<CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_child_preference"
                android:summary="@string/summary_child_preference" />

    </PreferenceCategory>-->

</PreferenceScreen>