<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageButton
        android:id="@+id/shutter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shutter_button"
        android:padding="10dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/btn_shutter" />

    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/switch_camera"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_switch_camera" />
    
    <ImageButton
        android:id="@+id/switch_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/switch_flash"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_flash_off" />

</RelativeLayout>