<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/shutter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shutter_button"
        android:padding="10dp"
        android:paddingBottom="50dp"
        android:src="@drawable/btn_shutter" />

    <ImageButton
        android:id="@+id/switch_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/switch_flash"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_flash_off" />
    
    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/switch_camera"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_switch_camera" />
    
    <ImageButton
        android:id="@+id/accept_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/accept_image"
        android:background="@drawable/ic_button_selector"
        android:visibility="gone"
        android:src="@drawable/ic_action_accept" />
    
    <ImageButton
        android:id="@+id/discard_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/discard_image"
        android:background="@drawable/ic_button_selector"
        android:visibility="gone"
        android:src="@drawable/ic_action_discard" />

    </RelativeLayout>
</LinearLayout>
