<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/camera_preview_layout"
    android:orientation="vertical">
    
    <!-- Here we will programmatically add the camera preview -->
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/control_mask">
        
    <ImageButton
        android:id="@+id/switch_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="top|left"
        android:contentDescription="@string/switch_flash"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_flash_off" />
    
    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="top|right"
        android:contentDescription="@string/switch_camera"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_switch_camera" />
    
    <ImageButton
        android:id="@+id/accept_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="top|right"
        android:contentDescription="@string/accept_image"
        android:background="@drawable/ic_button_selector"
        android:visibility="gone"
        android:src="@drawable/ic_action_accept" />
    
    <ImageButton
        android:id="@+id/discard_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="top|left"
        android:contentDescription="@string/discard_image"
        android:background="@drawable/ic_button_selector"
        android:visibility="gone"
        android:src="@drawable/ic_action_discard" />
    
    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="bottom|left"
        android:contentDescription="@string/switch_flash"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_settings" />
        
    <ImageButton 
        android:id="@+id/shutter_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/shutter_button"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/btn_shutter" />
    
    <ImageButton
        android:id="@+id/goto_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/switch_flash"
        android:background="@drawable/ic_button_selector"
        android:src="@drawable/ic_action_picture" />
      
    </FrameLayout>
</FrameLayout>
